# hs-boot

./: hs-boot.cabal  package.yaml  stack.yaml
src/: Main.hs  Run.hs
test/: MainSpec.hs
test/01/: Main.hs
test/fake-bin/: hs-boot  test-hs-boot
test/projects/01/: A.hs  B.hs  compile.sh
test/projects/02/: A.hs  B.hs  Main.hs  compile.sh
